added Rd for options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(capture.str)
 export(js.client.add.watch)
 export(js.client.clear.watches)
 export(js.client.get.progress.bar)
+export(js.client.options)
 export(js.client.progress.bar)
 export(js.client.remove.watch)
 export(js.client.set.progress.bar)
