--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
 Package: jsClientLib
 Type: Package
 Title: Tools for the JS front-end
-Version: 1.9.2
+Version: 1.9.3
 Date: 2016-05-03
 Author: Duncan Werner
 Maintainer: Duncan Werner <dwerner@riskamp.com>
 Description: Tools for the JS front-end
 License: GPL (>= 2)
 Imports:
-    Rcpp (>= 0.12.3),
-    gdtools
-LinkingTo: Rcpp, gdtools
+    Rcpp (>= 0.12.3)
+LinkingTo: Rcpp
 RoxygenNote: 5.0.1
